# FeynGraph

./: .gitignore  Cargo.toml  docs-header.html  mkdocs.yml  objects.inv  pyproject.toml  zensical.toml
.cargo/: config.toml
benches/: diagrams.rs
crates/feyngraph/: Cargo.toml
crates/feyngraph-core/: Cargo.toml
crates/feyngraph-core/src/: lib.rs  util.rs
crates/feyngraph-core/src/diagram/: filter.rs  mod.rs  view.rs  workspace.rs
crates/feyngraph-core/src/model/: mod.rs  qgraf_parser.rs  ufo_parser.rs
crates/feyngraph-core/src/topology/: filter.rs  mod.rs
crates/feyngraph-drawing/: Cargo.toml
crates/feyngraph-drawing/src/: canvas.rs  components.rs  consts.rs  layout.rs  lib.rs  math.rs  style.rs  util.rs
crates/feyngraph-drawing/src/backend/: mod.rs  svg.rs  tikz.rs  typst.rs
crates/feyngraph-expression/: Cargo.toml
crates/feyngraph-expression/src/: display.rs  lib.rs  normalize.rs  ops.rs  replace.rs  split.rs  translation.rs
crates/feyngraph-expression/tests/: symbol.rs
crates/feyngraph-model/: Cargo.toml
crates/feyngraph-model/src/: lib.rs  particle.rs  ufo.rs  vertex.rs
crates/feyngraph-model/src/qgraf/: mod.rs
crates/feyngraph-python/: Cargo.toml  pyproject.toml
crates/feyngraph-python/feyngraph.data/data/share/FeynGraph/templates/: tapir.jinja
crates/feyngraph-python/python/feyngraph/: __init__.py  main.py
crates/feyngraph-python/src/: diagrams.rs  drawing.rs  lib.rs  topology.rs
crates/feyngraph-util/: Cargo.toml
crates/feyngraph-util/src/: lib.rs  unicode.rs
crates/feyngraph/benches/: diagrams.rs  topologies.rs
crates/feyngraph/src/: lib.rs
crates/feyngraph/tests/: diagrams.rs  topology.rs
crates/feyngraph/tests/common/: mod.rs
doc/: conf.py  index.rst
feyngraph.data/scripts/: feyngraph
python/feyngraph/: __init__.py  feyngraph.pyi  main.py  topology.pyi  wolfram.py
reference/feyngraph/: index.html
reference/topology/: index.html
search/: search_index.json
src/: lib.rs  util.rs
src/bindings/: mod.rs  python.rs  wolfram.rs
src/bindings/python/: diagrams.rs  drawing.rs  mod.rs  topology.rs
src/diagram/: components.rs  filter.rs  mod.rs  view.rs  workspace.rs
src/drawing/: backend.rs  canvas.rs  components.rs  layout.rs  math.rs  mod.rs  style.rs
src/drawing/backend/: mod.rs  svg.rs  tikz.rs  typst.rs
src/model/: mod.rs  qgraf_model.pest  qgraf_parser.rs  ufo_model.pest  ufo_parser.rs  ufoparser.rs
src/topology/: components.rs  filter.rs  matrix.rs  mod.rs  workspace.rs
tests/: diagrams.rs  qcd.qgraf  topology.rs
tests/Standard_Model_UFO/: CT_couplings.py  __init__.py  coupling_orders.py  couplings.py  decays.py  lorentz.py  parameters.py  particles.py  vertices.py
tests/common/: mod.rs
tests/models/Q_4F_UFO/: coupling_orders.py  parameters.py  particles.py
tests/models/SMEFTFR/: coupling_orders.py  lorentz.py  vertices.py
tests/models/SMEFTsim_U35_alphaScheme_UFO/: couplings.py
tests/models/Standard_Model_UFO/: particles.py
tests/resources/QCD_UFO/: particles.py
tests/resources/Q_4F_UFO/: couplings.py  lorentz.py  vertices.py
tests/resources/SMEFTFR/: CT_couplings.py  __init__.py  couplings.py  parameters.py  particles.py
tests/resources/SMEFTsim_U35_alphaScheme_UFO/: coupling_orders.py
