[package]
name = "feyngraph"
version = "0.0.1"
edition = "2024"

[lib]
name = "feyngraph"
crate-type = ["lib", "cdylib"]

[dependencies]
itertools = "0.14"
rayon = "1"
log = "0.4"
thiserror = "2"
indexmap = "2"
either = "1"
peg = "0.8"
rustc-hash = "2"
pyo3 = { version = "0.25", features = [
    "auto-initialize",
    "either",
    "multiple-pymethods",
    "abi3-py37",
], optional = true }
pyo3-ffi = { version = "0.25", optional = true }
pyo3-log = { version = "0.12", optional = true }

[dev-dependencies]
paste = "1"
tempfile = "3"
regex = "1"
test-log = "0.2"
approx = "0.5"
criterion = "0.7"

[features]
default = []
python-bindings = ["pyo3", "pyo3-log", "pyo3-ffi"]
wolfram-bindings = ["python-bindings"]

[[bench]]
name = "topologies"
harness = false

[[bench]]
name = "diagrams"
harness = false
