[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Jens Braun <j.braun@kit.edu>"]
categories = ["science"]
description = "A modern Feynman diagram generation toolkit"
edition = "2024"
keywords = ["feynman", "diagrams", "physics", "hep"]
license = "MPL-2.0"
repository = "https://github.com/jens-braun/feyngraph"

[workspace.dependencies]
itertools = "0.15"
rayon = "1.12"
log = "0.4"
indexmap = "2.14"
either = "1.16"
peg = "0.8"
rustc-hash = "2.1"

# Python bindings
pyo3 = { version = "0.29" }
pyo3-ffi = { version = "0.29" }
pyo3-log = { version = "0.13" }

# Dev-Dependencies
paste = "1.0"
tempfile = "3.27"
regex = "1.12"
test-log = "0.2"
approx = "0.5"
criterion = { version = "0.8", default-features = false, features = ["rayon", "cargo_bench_support"] }
pretty_assertions = "1.4"
