[workspace]
members = [
    "crates/feyngraph",
    "crates/feyngraph-core",
    "crates/feyngraph-drawing",
    "crates/feyngraph-expression",
    "crates/feyngraph-model",
    # "crates/feyngraph-python",
    "crates/feyngraph-util",
]
resolver = "3"

[workspace.package]
authors = ["Jens Braun <j.braun@kit.edu>"]
categories = ["science"]
description = "A modern Feynman diagram generation toolkit"
edition = "2024"
keywords = ["feynman", "diagrams", "physics", "hep"]
license = "MPL-2.0"
repository = "https://github.com/jens-braun/feyngraph"

[workspace.dependencies]
itertools = "0.15"
rayon = "1.12"
log = "0.4"
indexmap = "2.14"
either = "1.16"
peg = "0.8"
rustc-hash = "2.1"
chumsky = { version = "0.13", default-features = false }
ariadne = "0.6"
num-complex = "0.4"
serde = "1.0"

# Python bindings
pyo3 = { version = "0.29" }
pyo3-ffi = { version = "0.29" }
pyo3-log = { version = "0.13" }

# Dev-Dependencies
paste = "1.0"
tempfile = "3.27"
regex = "1.12"
test-log = "0.2"
approx = "0.5"
criterion = { version = "0.8", default-features = false, features = ["rayon", "cargo_bench_support"] }
pretty_assertions = "1.4"
serde_json = "1.0"
