[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
features = ["python-bindings", "pyo3/extension-module", "wolfram-bindings"]
python-source = "python"

[project]
name = "feyngraph"
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intened Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
cli = [
    "rich (>=14.1.0,<15.0.0)",
    "rich-argparse (>=1.7.1,<2.0.0)",
    "tomli (>=2.2.1,<3.0.0); python_version < '3.11'",
    "jinja2 (>=3.1.6,<4.0.0)",
]
