[package]
name = "feyngraph-model"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ufomodel = { path = "../ufomodel", optional = true }
chumsky = { workspace = true }
ariadne = { workspace = true }
util = { package = "feyngraph-util", path = "../feyngraph-util" }
itertools = { workspace = true }
peg = { workspace = true }
log = { workspace = true }

[features]
ufo = ["dep:ufomodel"]

[dev-dependencies]
test-log ={ workspace = true }
pretty_assertions ={ workspace = true }
