[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "feyngraph-python"
repository.workspace = true
version = "0.0.1"

[lib]
name = "feyngraph"
crate-type = ["cdylib"]
doc = false

[dependencies]
feyngraph-core = {  path = "../feyngraph-core", features = ["_internal_api"] }
drawing = { package = "feyngraph-drawing", path = "../feyngraph-drawing", optional = true }
either = { workspace = true }
log = { workspace = true }
itertools = { workspace = true }
indexmap = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true }
pyo3 = { workspace = true, features = [
    "auto-initialize",
    "either",
    "indexmap",
    "multiple-pymethods",
    "abi3-py38",
]}
pyo3-ffi = { workspace = true }
pyo3-log = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
pretty_assertions = { workspace = true }
test-log = { workspace = true }

[features]
default = ["drawing"]
drawing = ["dep:drawing"]
