[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "feyngraph-util"
repository.workspace = true
version = "0.0.1"

[dependencies]
indexmap = { workspace = true }
rustc-hash = { workspace = true }
