[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "feyngraph"
repository.workspace = true
version = "0.0.1"

[lib]
name = "feyngraph"
crate-type = ["lib"]

[dependencies]
feyngraph-core = {path = "../feyngraph-core"}
feyngraph-drawing = {path = "../feyngraph-drawing", optional = true}
feyngraph-model = { path = "../feyngraph-model" }

[dev-dependencies]
itertools = { workspace = true }
rustc-hash = { workspace = true }
paste = { workspace = true }
tempfile = { workspace = true }
regex = { workspace = true }
test-log = { workspace = true }
approx = { workspace = true }
criterion = { workspace = true }
pretty_assertions = { workspace = true }

[features]
default = []
drawing = ["dep:feyngraph-drawing"]

[[bench]]
name = "topologies"
harness = false

[[bench]]
name = "diagrams"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/docs-header.html"]

[[example]]
name = "gg_gg_tree"
required-features = ["drawing"]
